2008-03-02  Andreia Gaita  <avidigal@novell.com>

	* interfaces.h: Seems xulrunner 1.9 removed some headers with defines
	that I was using to detect what type of toolkit it was running on. Removed
	the offending header from the include list, and rely on OS defines only 
	(*sigh*)

	* gluezilla.h: Clean out a bunch of events that are not being used. Change
	the OS detection defines. Added new managed string support, soon to replace
	old string methods.

	* gluezilla.cpp, Widget.*: Change OS detection defines. Fix platform detection
	code so it runs happily in gtk apps as well.

	* EventListener.cpp: Send the event-affected node up to the managed side so
	it can be matched it to a managed object and fired properly.

2008-01-30  Andreia Gaita <avidigal@novell.com>

	* windows.mak: add local directory for includes.
	* BrowserWindow.cpp: allocate event name differently, msvc doesn't
	like the old way.
	* Widget.cpp: only activate and deactivate browser on non-windows
	systems, windows doesn't like it.

2008-01-28  Andreia Gaita <avidigal@novell.com>

	* windows.mak: Updated with new EventListener files

2008-01-28  Andreia Gaita <avidigal@novell.com>

	* EventListener.cpp, EventListener.h: Forgot to add them :p

2008-01-28  Andreia Gaita <avidigal@novell.com>

	* EventListener.*: Move event handlers out of BrowserWindow and into
	a separate handler class. This class calls events directly (does not
	go through Widget, which was a pointless call anyway). Add focus. blur,
	load and unload handlers.

	* BrowserWindow.*: Relay events to the EventListener class, and save
	instances on a list for later release.
	Use nsIEmbeddingSiteWindow2 interface to get blur events.
	Fire Status text change events.

	* Widget.*: Call Activate() on focus, and Deactivate() on blur. 
	According to the docs, it should only be called if the browser is shown, 
	but focus doesn't work correctly without it.
	Remove Event* methods that are not needed anymore (events are called